syntax = "proto3";

package com.example;

message UserProfile {
    string user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
}
